objects/ClaytonCopadoIntegration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApiPassword__c</fullName>
        <label>ApiPassword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApiUser__c</fullName>
        <label>ApiUser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <label>ClientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <label>ClientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <label>ProjectId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ClaytonCopadoIntegration</label>
</CustomObject>